--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
 </head>
 <body>
-    <h1>Check YouBike Pay App Installation</h1>
+    <h1>Check EasyWallet App Installation</h1>
     <button id="checkApp">Check App Installation</button>
     <p id="result"></p>
 
